--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>nisu</title>
+    <meta name="flexible" content="initial-dpr=2,maximum-dpr=3" />
+    <link rel="stylesheet" href="https://unpkg.com/reset-css@4.0.1/reset.css">
   </head>
   <body>
     <div id="app"></div>
