--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>nisu</title>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3" />
-    <link rel="stylesheet" href="https://unpkg.com/reset-css@4.0.1/reset.css">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/reset-css@4.0.1/reset.css"> -->
+    <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js"></script>
   </head>
   <body>
     <div id="app"></div>
